--- a/1024.css
+++ b/1024.css
@@ -26,7 +26,9 @@
         font-size: 0.5rem;
     }
     /* -- Général -- */
-    
+    #hebergements, .populaires, #activites{
+        padding-top: 1.875rem;
+    } 
     /*.container{
         padding: 0 2.75rem 0 2.75rem;
         margin: auto;
@@ -74,14 +76,13 @@
         margin-right: 1rem;
     }
     /* -- Recherche - Nombre de résultats obtenus -- */
-    /* -- Mise en forme d'une carte par défaut -- */
-    #hebergements .carte{
+    /* -- Mise en forme d'une carte hébergement résultat -- */
+    #hebergements .carte{ /*A modifier ??*/
         width: 28.5%;
     }
-    #hebergements .carte__img{
+    #hebergements .carte__img{/*A modifier ??*/
         height: 5rem;
     }
-    
     /* -- Mise en forme d'une carte pour hébergement populaire -- */
     .carte--populaire .carte__img{
         width: 5.7rem;  
@@ -91,19 +92,19 @@
         padding-bottom: 0.3rem;
     }
     .carte--populaire .carte__infos{
-        width: 8rem;
+       width: 8rem; /*A supprimer ??*/
         margin-left: 1rem;
     }
     .carte--populaire .carte__infos .tarif{
         white-space: nowrap;
     }
     /* -- Résultats de la recherche -- */
-    #hebergements, .populaires{
-        border-radius: 1rem; 
-    }
     .resultats{
         flex-direction: row;
         align-items: stretch;
+    }
+    #hebergements, .populaires{
+        border-radius: 1rem; 
     }
     #hebergements{
         order: 1;
@@ -122,10 +123,6 @@
         padding-left: 1.55rem;
         padding-right: 1.8rem;
     }
-    .populaires__conteneur{
-        padding-top: 0;
-        margin-top: 0;
-    }
     .hebergements__conteneur{
         margin-top: 1.375rem;
         display: flex;
@@ -133,27 +130,23 @@
         gap: 1.25rem;
     }
     .populaires__conteneur{
+        padding-top: 0;
+       /* margin-top: 0;*/
         margin-top: 1.5rem;
         display: flex;
         flex-direction: column;
         row-gap: 1.5rem;
     }
+    .hebergements__conteneur .carte{
+        width: 12rem;
+    }
+    
     .plus{
         margin-top: 2rem;
         margin-bottom: 0;
     }
-    .hebergements__conteneur .carte{
-        width: 12rem;
-    }
-    #hebergements, .populaires, #activites{
-        padding-top: 1.875rem;
-    } 
-    #activites{
-        margin-top: 1rem;
-        padding-left: 0;
-        padding-right: 0;
-        padding-bottom: 1.75rem;
-    } 
+    
+    /* -- Mise en forme d'une carte activité -- */
     .carte--activite{
         padding: 0;
         margin-top: 1.25rem;
@@ -176,6 +169,12 @@
         flex: 1;
     }
     /* -- Activités -- */
+    #activites{
+        margin-top: 1rem;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 1.75rem;
+    }
     
     .activites__conteneur{
         margin-top: 1rem;
